# warp-dart

./: .gitignore  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/warp_dart_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart  rg_ipfs.dart
example_console/: README.md  pubspec.yaml
example_console/lib/: common.dart  constellation_test.dart  example_console.dart  main.dart  multipass_test.dart  raygurn_test.dart
example_console/linux/: CMakeLists.txt  my_application.cc
example_console/test/: example_console_test.dart
example_console/windows/: CMakeLists.txt
example_console/windows/runner/: Runner.rc  main.cpp
ios/: warp_dart.podspec
ios/Classes/: warp_dart.c
ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
lib/: costellation.dart  fs_ipfs.dart  fs_memory.dart  mp_ipfs.dart  multipass.dart  pocketdimension.dart  raygun.dart  rg_ipfs.dart  warp.dart  warp_dart.dart  warp_dart_bindings_generated.dart
src/: CMakeLists.txt  warp_dart.c
